tests/errors/single_node_in_net.nm
component Foo {
    prefix = "U";
    footprint = "foo";

    pin A: input = 1;
}

abstract component Main {
    net SOLO;

    Foo {
        A: SOLO;
    }
}